Update profile for Hajime Matsumoto: blue theme, image adjustments, and glowing borders

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="theme-color" content="#ff6b35">
+    <meta name="theme-color" content="#0066cc">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="LotusCard">
-    <title>堤祐太 - プロフィール</title>
+    <title>松本創 - プロフィール</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -22,7 +22,7 @@
         <!-- バナー画像 -->
         <div class="banner">
             <div class="banner-image">
-                <img src="IMG_8874 - 24_0064 堤（Tsutsumi）.png" alt="Background" class="banner-bg-image">
+                <img src="IMG_3724 - 松本創.jpeg" alt="Background" class="banner-bg-image">
             </div>
         </div>
 
@@ -30,20 +30,20 @@
         <div class="profile-section">
             <div class="profile-logo">
                 <div class="logo-circle">
-                    <img src="IMG_2688 - 24_0064 堤（Tsutsumi）.jpeg" alt="LotusCard Profile" class="profile-image">
+                    <img src="IMG_0416 - 松本創.jpeg" alt="松本創 Profile" class="profile-image">
                 </div>
-                <div class="profile-name">堤　祐太</div>
+                <div class="profile-name">松本　創</div>
             </div>
 
-            <div class="title">近畿大学</div>
-            <div class="subtitle">経営学部キャリアマネジメント学科</div>
+            <div class="title">同志社大学</div>
+            <div class="subtitle">経済学部2年</div>
 
             <!-- タグ -->
             <div class="tags">
-                <span class="tag">ツナグ</span>
-                <span class="tag">HANZEON</span>
-                <span class="tag">嘉們</span>
-                <span class="tag">シャイニング・レア</span>
+                <span class="tag">4DNR学生部リーダー</span>
+                <span class="tag">ワンダーフォーゲル部</span>
+                <span class="tag">同志社大学</span>
+                <span class="tag">自転車旅</span>
             </div>
 
         <!-- アクションボタン -->
@@ -69,10 +69,10 @@
                 <div class="tab-content">
                     <div id="about" class="tab-panel active">
                         <h3>自己紹介</h3>
-                        <p>趣味は舞台観劇、読書、人とおしゃべり、ギター、お笑い、古着屋巡りなどです。</p>
-                        <p>全く人見知りしないのが長所です。</p>
-                        <p>飲み会が好きです。</p>
-                        <p>高校時代に所属していた和太鼓部で全国大会優勝し、国立劇場で天皇陛下の前で演奏したことがあります。</p>
+                        <p>人とのつながりから、新しいことを発見することを楽しみながら活動しています！</p>
+                        <p>分野を問わず、自分の知らない世界にどんどん飛び込んでいきたいと思っています！</p>
+                        <p>浪人経験を経て、自分を支えてくれる人たちのありがたみを実感するとともに、自分の軸で考えて行動を選択することの大切さに気づきました。</p>
+                        <p>オーストラリア1800kmを2ヶ月間自転車で1人旅。この世界には自分とは違った価値観を持つ人がたくさんいることを知りました。</p>
                     </div>
                     
                     <div id="activities" class="tab-panel">
@@ -80,47 +80,54 @@
                         <div class="activity-item">
                             <i class="fas fa-users"></i>
                             <div>
-                                <h4>学生団体ツナグ</h4>
-                                <p>運営メンバー</p>
+                                <h4>学生プラットフォーム4DNR</h4>
+                                <p>学生部リーダー</p>
                             </div>
                         </div>
                         <div class="activity-item">
-                            <i class="fas fa-handshake"></i>
+                            <i class="fas fa-mountain"></i>
                             <div>
-                                <h4>学生コミュニティHANZEON</h4>
-                                <p>運営メンバー</p>
+                                <h4>ワンダーフォーゲル部</h4>
+                                <p>要項作成等、計画段階から実行まで全て関わっている</p>
                             </div>
                         </div>
                         <div class="activity-item">
-                            <i class="fas fa-music"></i>
+                            <i class="fas fa-bicycle"></i>
                             <div>
-                                <h4>よさこい社会人チーム『嘉們』</h4>
-                                <p>正規メンバー</p>
+                                <h4>自転車旅</h4>
+                                <p>オーストラリア1800kmを2ヶ月間自転車で1人旅</p>
                             </div>
                         </div>
                         <div class="activity-item">
-                            <i class="fas fa-laugh"></i>
+                            <i class="fas fa-graduation-cap"></i>
                             <div>
-                                <h4>大阪教育大学お笑いサークル<br>『シャイニング・レア』</h4>
-                                <p>所属メンバー</p>
+                                <h4>同志社大学経済学部</h4>
+                                <p>2年生</p>
                             </div>
                         </div>
                     </div>
                     
                     <div id="achievements" class="tab-panel">
-                        <h3>実績・受賞歴</h3>
+                        <h3>実績・経験</h3>
                         <div class="achievement-item">
-                            <i class="fas fa-trophy"></i>
+                            <i class="fas fa-globe"></i>
                             <div>
-                                <h4>和太鼓全国大会優勝</h4>
-                                <p>高校時代に所属していた和太鼓部で全国大会優勝</p>
+                                <h4>オーストラリア自転車旅</h4>
+                                <p>1800kmを2ヶ月間自転車で1人旅を完走</p>
                             </div>
                         </div>
                         <div class="achievement-item">
-                            <i class="fas fa-crown"></i>
+                            <i class="fas fa-users"></i>
                             <div>
-                                <h4>国立劇場での演奏</h4>
-                                <p>天皇陛下の前で演奏する栄誉</p>
+                                <h4>4DNR学生部リーダー</h4>
+                                <p>組織の円滑な運営に日々奮闘中</p>
+                            </div>
+                        </div>
+                        <div class="achievement-item">
+                            <i class="fas fa-mountain"></i>
+                            <div>
+                                <h4>ワンダーフォーゲル部活動</h4>
+                                <p>山と自転車の深みにハマり、要項作成等、計画段階から実行まで全て関わっている</p>
                             </div>
                         </div>
                     </div>
@@ -129,46 +136,46 @@
 
             <!-- ソーシャルメディアリンク -->
             <div class="social-links">
-                <a href="https://www.instagram.com/yuta223_6767" class="social-link" target="_blank">
+                <a href="https://www.instagram.com/hajjy.no?igsh=MWxnb3ZkNHlvNnZ4OQ%3D%3D&utm_source=qr" class="social-link" target="_blank">
                     <div class="social-icon instagram">
                         <i class="fab fa-instagram"></i>
                     </div>
                     <div class="social-info">
                         <div class="social-name">Instagram</div>
-                        <div class="social-handle">@yuta223_6767</div>
+                        <div class="social-handle">@hajjy.no</div>
                     </div>
                     <div class="social-arrow">
                         <i class="fas fa-chevron-right"></i>
                     </div>
                 </a>
 
-                <a href="mailto:yu_ta20051021@icloud.com" class="social-link">
+                <a href="mailto:hajime.dwv@gmail.com" class="social-link">
                     <div class="social-icon email">
                         <i class="fas fa-envelope"></i>
                     </div>
                     <div class="social-info">
                         <div class="social-name">Email</div>
-                        <div class="social-handle">yu_ta20051021@icloud.com</div>
+                        <div class="social-handle">hajime.dwv@gmail.com</div>
                     </div>
                     <div class="social-arrow">
                         <i class="fas fa-chevron-right"></i>
                     </div>
                 </a>
 
-                <a href="tel:08097352005" class="social-link">
+                <a href="tel:07041125347" class="social-link">
                     <div class="social-icon phone">
                         <i class="fas fa-phone"></i>
                     </div>
                     <div class="social-info">
                         <div class="social-name">Phone</div>
-                        <div class="social-handle">080-9735-2005</div>
+                        <div class="social-handle">070-4112-5347</div>
                     </div>
                     <div class="social-arrow">
                         <i class="fas fa-chevron-right"></i>
                     </div>
                 </a>
 
-                <a href="https://line.me/ti/p/tsutsumiyuta20051021" class="social-link" target="_blank">
+                <a href="https://line.me/ti/p/nhRH1UPm6H" class="social-link" target="_blank">
                     <div class="social-icon line">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="#00c300">
                             <path d="M19.365 9.863c.349 0 .63.285.63.631 0 .345-.281.63-.63.63H17.61v1.125h1.755c.349 0 .63.283.63.63 0 .344-.281.629-.63.629h-2.386c-.345 0-.627-.285-.627-.629V8.108c0-.345.282-.63.63-.63h2.386c.349 0 .63.285.63.63 0 .349-.281.63-.63.63H17.61v1.125h1.755zm-3.855 3.016c0 .27-.174.51-.432.596-.064.021-.133.031-.199.031-.211 0-.391-.09-.51-.25l-2.443-3.317v2.94c0 .344-.279.629-.631.629-.346 0-.626-.285-.626-.629V8.108c0-.27.173-.51.43-.595.06-.023.136-.033.194-.033.195 0 .375.104.495.254l2.462 3.33V8.108c0-.345.282-.63.63-.63.345 0 .63.285.63.63v4.771zm-5.741 0c0 .344-.279.629-.631.629-.345 0-.626-.285-.626-.629V8.108c0-.345.281-.63.63-.63.346 0 .627.285.627.63v4.771zm-2.466.629H4.917c-.345 0-.63-.285-.63-.629V8.108c0-.345.285-.63.63-.63.348 0 .63.285.63.63v4.141h1.756c.348 0 .629.283.629.63 0 .344-.281.629-.629.629M24 10.314C24 4.943 18.615.572 12 .572S0 4.943 0 10.314c0 4.811 4.27 8.842 10.035 9.608.391.082.923.258 1.058.59.12.301.079.766.038 1.08l-.164 1.02c-.045.301-.24 1.186 1.049.645 1.291-.539 6.916-4.078 9.436-6.975C23.176 14.393 24 12.458 24 10.314"/>
@@ -176,7 +183,7 @@
                     </div>
                     <div class="social-info">
                         <div class="social-name">LINE</div>
-                        <div class="social-handle">@tsutsumiyuta20051021</div>
+                        <div class="social-handle">@nhRH1UPm6H</div>
                     </div>
                     <div class="social-arrow">
                         <i class="fas fa-chevron-right"></i>
