Add photo gallery tab with 2 images and remove captions

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <button class="tab-btn active" onclick="showTab('about')">自己紹介</button>
                     <button class="tab-btn" onclick="showTab('activities')">活動</button>
                     <button class="tab-btn" onclick="showTab('achievements')">実績</button>
+                    <button class="tab-btn" onclick="showTab('photos')">写真</button>
                 </div>
                 
                 <div class="tab-content">
@@ -121,6 +122,18 @@
                             <div>
                                 <h4>ワンダーフォーゲル部活動</h4>
                                 <p>山と自転車の深みにハマり、要項作成等、計画段階から実行まで全て関わっている</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div id="photos" class="tab-panel">
+                        <h3>写真</h3>
+                        <div class="photo-gallery">
+                            <div class="photo-item">
+                                <img src="IMG_1767 - 松本創.jpeg" alt="松本創の写真1" class="photo-image">
+                            </div>
+                            <div class="photo-item">
+                                <img src="IMG_6343 - 松本創.jpeg" alt="松本創の写真2" class="photo-image">
                             </div>
                         </div>
                     </div>
