Reorder achievements and update self-introduction text

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
             <!-- タグ -->
             <div class="tags">
-                <span class="tag">4DNR学生部リーダー</span>
-                <span class="tag">ワンダーフォーゲル部</span>
                 <span class="tag">同志社大学</span>
-                <span class="tag">自転車旅</span>
+                <span class="tag">ワンダーフォーゲル部</span>
+                <span class="tag">4DNR学生部リーダー</span>
+                <span class="tag">自転車イベント企画</span>
             </div>
 
         <!-- アクションボタン -->
@@ -72,7 +72,8 @@
                         <h3>自己紹介</h3>
                         <p>人とのつながりから、新しいことを発見することを楽しみながら活動しています！</p>
                         <p>分野を問わず、自分の知らない世界にどんどん飛び込んでいきたいと思っています！</p>
-                        <p>浪人経験を経て、自分を支えてくれる人たちのありがたみを実感するとともに、自分の軸で考えて行動を選択することの大切さに気づきました。</p>
+                        <p>学生交流プラットフォーム、4DNRで学生イベントの企画運営等に携わっています。</p>
+                        <p>最近では、自転車関連のイベントを企画しています！</p>
                         <p>オーストラリア1800kmを2ヶ月間自転車で1人旅。この世界には自分とは違った価値観を持つ人がたくさんいることを知りました。</p>
                     </div>
                     
@@ -104,6 +105,13 @@
                     <div id="achievements" class="tab-panel">
                         <h3>実績・経験</h3>
                         <div class="achievement-item">
+                            <i class="fas fa-mountain"></i>
+                            <div>
+                                <h4>ワンダーフォーゲル部活動</h4>
+                                <p>要項作成等、計画段階から実行まで全て関わり、状況判断やリスク管理を行う</p>
+                            </div>
+                        </div>
+                        <div class="achievement-item">
                             <i class="fas fa-globe"></i>
                             <div>
                                 <h4>オーストラリア自転車旅</h4>
@@ -115,13 +123,6 @@
                             <div>
                                 <h4>4DNR学生部リーダー</h4>
                                 <p>組織の円滑な運営に日々奮闘中</p>
-                            </div>
-                        </div>
-                        <div class="achievement-item">
-                            <i class="fas fa-mountain"></i>
-                            <div>
-                                <h4>ワンダーフォーゲル部活動</h4>
-                                <p>山と自転車の深みにハマり、要項作成等、計画段階から実行まで全て関わっている</p>
                             </div>
                         </div>
                     </div>
